<resources>
    <string name="camera_setting">Camera</string>
    <string name="path_settings">System apps/Camera/Settings</string>
    <string name="search_settings">Camera settings;Quality;Image quality;Image location;Picture location;Face detection;Camera sound</string>
    <string name="hibernate_hint">Tap the screen to wake Camera</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera_once">Can\'t connect to camera</string>
    <string name="cannot_connect_camera_twice">Still can\'t connect to camera. Try restarting your device.</string>
    <string name="camera_disabled">Camera has been disabled</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="wait">Just a sec…</string>
    <string name="no_storage">Insert SD card before using camera</string>
    <string name="not_enough_space">Internal storage is full</string>
    <string name="preparing_sd">Checking internal storage…</string>
    <string name="access_sd_fail">Couldn\'t access USB storage.</string>
    <string name="confirm_restore_title">Restore default settings</string>
    <string name="confirm_restore_message">Restore Camera\'s default settings?</string>
    <string name="confirm_location_title">Remember photo locations?</string>
    <string name="confirm_location_message">Tag your photos and videos with the locations where they are taken. Other apps can access this information along with your saved images.</string>
    <string name="confirm_location_alert">Remember photo locations</string>
    <string name="start_capture">OK</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_recordlocation_title">Save location info</string>
    <string name="pref_camera_recordlocation_default">false</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_sound_title">Camera sounds</string>
    <string name="pref_camera_proximity_lock_title">Pocket mode</string>
    <string name="pref_camera_proximity_lock_summary">Lock touch gestures when placed in a pocket</string>
    <string name="pref_front_mirror_title">Mirror front camera</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">6</string>
    <string name="pref_mi_front_video_quality_default">6</string>
    <string name="pref_mtk_video_quality_default">10</string>
    <string name="pref_video_quality_entry_value_4kuhd">8</string>
    <string name="pref_video_quality_entry_4kuhd">4K</string>
    <string name="pref_video_quality_entry_1080p">FULL HD</string>
    <string name="pref_video_quality_entry_720p">HD</string>
    <string name="pref_video_quality_entry_480p">SD</string>
    <string name="pref_video_quality_entry_fwvga">FWVGA</string>
    <string name="pref_video_quality_entry_wvga">WVGA</string>
    <string name="pref_video_quality_entry_vga">VGA</string>
    <string name="pref_video_quality_entry_wqvga">WQVGA</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">120</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2">Interval of 0.06 seconds (2 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_4">Interval of 0.12 seconds (4 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10">Interval of 0.3 seconds (10 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_30">Interval of 1 second (30 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_60">Interval of 2 seconds (60 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_90">Interval of 3 seconds (90 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_120">Interval of 4 seconds (120 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_150">Interval of 5 seconds (150 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_240">Interval of 8 seconds (240 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_300">Interval of 10 seconds (300 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_450">Interval of 15 seconds (450 times)</string>
    <string name="pref_video_time_lapse_frame_interval_entry_900">Interval of 30 seconds (900 times)</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camera settings</string>
    <string name="pref_camera_picturesize_title_simple_mode">Camera frame</string>
    <string name="pref_camera_jpegquality_default">@string/pref_camera_jpegquality_value_high</string>
    <string name="pref_camera_jpegquality_title">Picture quality</string>
    <string name="pref_video_focusmode_title">Focus mode</string>
    <string name="pref_video_focusmode_entryvalue_default">@string/pref_video_focusmode_entryvalue_auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_shader_coloreffect_default">0</string>
    <string name="pref_camera_coloreffect_title">Filters</string>
    <string name="pref_camera_contrast_default">5</string>
    <string name="pref_camera_contrast_title">Contrast</string>
    <string name="pref_camera_saturation_default">5</string>
    <string name="pref_camera_saturation_title">Saturation</string>
    <string name="pref_camera_sharpness_default">12</string>
    <string name="pref_camera_sharpness_title">Sharpness</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_iso_title">Select ISO</string>
    <string name="pref_camera_antibanding_title">Anti banding</string>
    <string name="pref_camera_antibanding_default">50hz</string>
    <string name="pref_camera_panoramamode_title">Panorama</string>
    <string name="accessibility_hdr">HDR switch button</string>
    <string name="accessibility_peak">Focus peak button</string>
    <string name="pref_camera_autoexposure_title">Auto exposure settings</string>
    <string name="pref_camera_autoexposure_default">center-weighted</string>
    <string name="pref_camera_audio_capture_title">Audio</string>
    <string name="pref_camera_facedetection_title">Face detection</string>
    <string name="pref_camera_hand_night_title">HHT</string>
    <string name="camera_settings_label">Camera</string>
    <string name="pref_camera_referenceline_title">Show gridlines</string>
    <string name="pref_camera_volumekey_function_title">Volume buttons function</string>
    <string name="pref_camera_volumekey_function_default">shutter</string>
    <string name="pref_camera_movie_solid_default">true</string>
    <string name="pref_camera_movie_solid_title">Image stabilization</string>
    <string name="pref_video_captrue_ability_title">Image capture while recording</string>
    <string name="pref_camera_watermark_title">Add time stamp on photos</string>
    <string name="pref_camera_face_info_watermark_title">Add age stamp on photos</string>
    <string name="accessibility_flash_mode_button">FlashButton</string>
    <string name="accessibility_skin_beautify_button">SkinBeautifyButton</string>
    <string name="pref_scan_qrcode_title">Scan QR codes</string>
    <string name="pref_scan_qrcode_default">true</string>
    <string name="pref_manual_exposure_title">Exposure time</string>
    <string name="pref_camera_exposuretime_default">0</string>
    <string name="pref_camera_show_gender_age_title">Age &amp; gender</string>
    <string name="pref_camera_show_gender_age_default">on</string>
    <string name="pref_face_beauty_title">Beautify</string>
    <string name="pref_face_beauty_default">@string/pref_face_beauty_medium</string>
    <string name="pref_priority_storage_title">Save to SD card</string>
    <string name="pref_camera_tilt_shift_default">circle</string>
    <string name="pref_camera_setting_switch_default">off</string>
    <string name="pref_video_speed_fast_title">Time-lapse</string>
    <string name="pref_video_speed_slow_title">Slow-motion</string>
    <string name="pref_camera_manual_mode_title">Manual</string>
    <string name="pref_camera_settings">Device</string>
    <string name="pref_capture_settings">Camera</string>
    <string name="pref_camcorder_settings">Video</string>
    <string name="pref_advance_settings">Additional settings</string>
    <string name="pref_camera_auto_chroma_flash_title">Chroma flash</string>
    <string name="pref_camera_ubifocus_title">Refocus</string>
    <string name="pref_camera_auto_capture_when_stable_title">Capture selected objects when stationary</string>
    <string name="pref_camera_auto_capture_when_stable_summary">To select an object, tap two diagonal points around its border. When the object is stationary, the camera will snap a shot automatically.</string>
    <string name="pref_qc_focus_position_value_default">0</string>
    <string name="pref_qc_focus_position_title">Focus</string>
    <string name="pref_front_mirror_default">auto</string>
    <string name="pref_camera_long_pressing_shutter_title">Press &amp; hold Shutter button to lock AE/AF/AWB</string>
    <string name="pref_audio_focus_default">normal</string>
    <string name="pref_audio_focus_title">Audio focus</string>
    <string name="pref_camera_long_press_shutter_feature_title">Press &amp; hold Shutter button</string>
    <string name="pref_camera_long_press_shutter_feature_default">burst</string>
    <string name="pref_camera_delay_capture_title">Timer</string>
    <string name="pref_camera_delay_capture_default">5</string>
    <string name="pref_camera_asd_night_title">Enhance lowlight photos automatically</string>
    <string name="pref_camera_asd_popup_title">Notify when flash is needed</string>
    <string name="pref_camera_gradienter_title">Straighten</string>
    <string name="pref_camera_snap_enable_title">Quick snap mode</string>
    <string name="pref_camera_snap_default">@string/pref_camera_snap_value_off</string>
    <string name="pref_camera_tilt_shift_title">Tilt-shift</string>
    <string name="pref_camera_magic_mirror_title">Magic mirror</string>
    <string name="pref_camera_stereo_mode_title">Stereo</string>
    <string name="pref_camera_stereo_default">5</string>
    <string name="pref_camera_zoom_mode_title">Lens</string>
    <string name="pref_camera_zoom_mode_default">@string/pref_camera_zoom_mode_entryvalue_wide</string>
    <string name="pref_camera_portrait_mode_title">Portrait mode</string>
    <string name="pref_camera_portrait_with_facebeauty_title">Beautify in Portrait mode</string>
    <string name="pref_camera_square_mode_title">Square</string>
    <string name="pref_skin_beautify_intelligent_title">Smart</string>
    <string name="pref_skin_beautify_slim_title">Slim</string>
    <string name="pref_skin_beautify_eye_title">Eyes</string>
    <string name="pref_skin_beautify_smooth_title">Skin</string>
    <string name="pref_skin_beautify_color_title">Tone</string>
    <string name="pref_skin_beautify_color_default">4</string>
    <string name="pref_skin_beautify_slim_default">3</string>
    <string name="pref_skin_beautify_eye_default">2</string>
    <string name="pref_skin_beautify_smooth_default">5</string>
    <string name="pref_camera_groupshot_mode_title">Group selfies</string>
    <string name="pref_groupshot_with_primitive_title">Save original photos as well in Group selfies mode</string>
</resources>