<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/com.android.camera" camera:title="@string/camera_settings_label">
    <PreferenceCategory camera:title="@string/pref_camera_settings" camera:key="category_device_setting">
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_recordlocation_title" camera:key="pref_camera_recordlocation_key" camera:defaultValue="@string/pref_camera_recordlocation_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_sound_title" camera:key="pref_camerasound_key" camera:defaultValue="true" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_proximity_lock_title" camera:key="pref_camera_proximity_lock_key" camera:summary="@string/pref_camera_proximity_lock_summary" camera:defaultValue="true" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_priority_storage_title" camera:key="pref_priority_storage" camera:defaultValue="@bool/priority_storage" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_snap_entries" camera:title="@string/pref_camera_snap_enable_title" camera:key="pref_camera_snap_key" camera:defaultValue="@string/pref_camera_snap_default" camera:entryValues="@array/pref_camera_snap_entryvalues" camera:labelList="@array/pref_camera_snap_labels" />
    </PreferenceCategory>
    <PreferenceCategory camera:title="@string/pref_capture_settings" camera:key="category_camera_setting">
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_auto_capture_when_stable_title" camera:key="pref_capture_when_stable_key" camera:summary="@string/pref_camera_auto_capture_when_stable_summary" camera:defaultValue="false" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_watermark_title" camera:key="pref_watermark_key" camera:defaultValue="false" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_face_info_watermark_title" camera:key="pref_face_info_watermark_key" camera:defaultValue="false" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_auto_chroma_flash_title" camera:key="pref_auto_chroma_flash_key" camera:defaultValue="@bool/pref_camera_auto_chroma_flash_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_referenceline_title" camera:key="pref_camera_referenceline_key" camera:defaultValue="false" />
        <com.android.camera.preferences.QRCodePreference camera:persistent="false" camera:title="@string/pref_scan_qrcode_title" camera:key="pref_scan_qrcode_key" camera:defaultValue="@string/pref_scan_qrcode_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_asd_night_title" camera:key="pref_camera_asd_night_key" camera:defaultValue="@bool/pref_camera_asd_night_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_asd_popup_title" camera:key="pref_camera_asd_popup_key" camera:defaultValue="@bool/pref_camera_asd_popup_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_long_pressing_shutter_title" camera:key="pref_camera_long_press_shutter_key" camera:defaultValue="@bool/pref_camera_long_pressing_shutter_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_groupshot_with_primitive_title" camera:key="pref_groupshot_with_primitive_picture_key" camera:defaultValue="true" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_long_press_shutter_feature_entries" camera:title="@string/pref_camera_long_press_shutter_feature_title" camera:key="pref_camera_long_press_shutter_feature_key" camera:defaultValue="@string/pref_camera_long_press_shutter_feature_default" camera:entryValues="@array/pref_camera_long_press_shutter_feature_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_front_mirror_entries" camera:title="@string/pref_front_mirror_title" camera:key="pref_front_mirror_key" camera:defaultValue="@string/pref_front_mirror_default" camera:entryValues="@array/pref_front_mirror_entryvalues" camera:labelList="@array/pref_front_mirror_labels" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:title="@string/pref_camera_picturesize_title_simple_mode" camera:key="pref_camera_picturesize_key" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_jpegquality_entries" camera:title="@string/pref_camera_jpegquality_title" camera:key="pref_camera_jpegquality_key" camera:defaultValue="@string/pref_camera_jpegquality_default" camera:entryValues="@array/pref_camera_jpegquality_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory camera:title="@string/pref_camcorder_settings" camera:key="category_camcorder_setting">
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_video_captrue_ability_title" camera:key="pref_video_captrue_ability_key" camera:defaultValue="false" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_movie_solid_title" camera:key="pref_camera_movie_solid_key" camera:defaultValue="@string/pref_camera_movie_solid_default" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_video_quality_entries" camera:title="@string/pref_video_quality_title" camera:key="pref_video_quality_key" camera:defaultValue="@array/pref_video_quality_default_values" camera:entryValues="@array/pref_video_quality_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_video_focusmode_entries" camera:title="@string/pref_video_focusmode_title" camera:key="pref_video_focusmode_key" camera:defaultValue="@string/pref_video_focusmode_entryvalue_default" camera:entryValues="@array/pref_video_focusmode_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_video_time_lapse_frame_interval_entries" camera:title="@string/pref_video_time_lapse_frame_interval_title" camera:key="pref_video_time_lapse_frame_interval_key" camera:defaultValue="@string/pref_video_time_lapse_frame_interval_default" camera:entryValues="@array/pref_video_time_lapse_frame_interval_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory camera:title="@string/pref_advance_settings" camera:key="category_advance_setting">
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_facedetection_title" camera:key="pref_camera_facedetection_key" camera:defaultValue="@bool/pref_camera_facedetection_default" />
        <CheckBoxPreference camera:persistent="false" camera:title="@string/pref_camera_portrait_with_facebeauty_title" camera:key="pref_camera_portrait_with_facebeauty_key" camera:defaultValue="@bool/pref_camera_portrait_with_facebeauty_default" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_show_gender_age_entries" camera:title="@string/pref_camera_show_gender_age_title" camera:key="pref_camera_show_gender_age_key" camera:defaultValue="@string/pref_camera_show_gender_age_default" camera:entryValues="@array/pref_camera_show_gender_age_entryvalues" camera:labelList="@array/pref_camera_show_gender_age_labels" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_volumekey_function_entries" camera:title="@string/pref_camera_volumekey_function_title" camera:key="pref_camera_volumekey_function_key" camera:defaultValue="@string/pref_camera_volumekey_function_default" camera:entryValues="@array/pref_camera_volumekey_function_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_antibanding_entries" camera:title="@string/pref_camera_antibanding_title" camera:key="pref_camera_antibanding_key" camera:defaultValue="@string/pref_camera_antibanding_default" camera:entryValues="@array/pref_camera_antibanding_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_autoexposure_entries" camera:title="@string/pref_camera_autoexposure_title" camera:key="pref_camera_autoexposure_key" camera:defaultValue="@string/pref_camera_autoexposure_default" camera:entryValues="@array/pref_camera_autoexposure_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_contrast_entries" camera:title="@string/pref_camera_contrast_title" camera:key="pref_qc_camera_contrast_key" camera:defaultValue="@string/pref_camera_contrast_default" camera:entryValues="@array/pref_camera_contrast_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_saturation_entries" camera:title="@string/pref_camera_saturation_title" camera:key="pref_qc_camera_saturation_key" camera:defaultValue="@string/pref_camera_saturation_default" camera:entryValues="@array/pref_camera_saturation_entryvalues" />
        <com.android.camera.ui.PreviewListPreference camera:persistent="false" camera:entries="@array/pref_camera_sharpness_entries" camera:title="@string/pref_camera_sharpness_title" camera:key="pref_qc_camera_sharpness_key" camera:defaultValue="@string/pref_camera_sharpness_default" camera:entryValues="@array/pref_camera_sharpness_entryvalues" />
    </PreferenceCategory>
    <Preference camera:persistent="false" camera:title="@string/confirm_restore_title" camera:key="pref_restore" />
</PreferenceScreen>
