<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:android="http://schemas.android.com/apk/res/com.android.camera" camera:title="@string/pref_camera_settings_category">
    <IconListPreference camera:title="@string/pref_camera_panoramamode_title" camera:key="pref_camera_panoramamode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_panorama" />
    <IconListPreference camera:title="@string/pref_camera_hand_night_title" camera:key="pref_camera_hand_night_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_hand_night" />
    <IconListPreference camera:title="@string/pref_camera_audio_capture_title" camera:key="pref_audio_capture" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_audio_capture" />
    <IconListPreference camera:title="@string/pref_camera_delay_capture_title" camera:key="pref_delay_capture_mode" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_delaycapture" />
    <IconListPreference camera:title="@string/pref_camera_delay_capture_title" camera:key="pref_delay_capture_key" camera:defaultValue="@string/pref_camera_delay_capture_default" camera:entryValues="@array/pref_camera_delay_capture_entryvalues" camera:entries="@array/pref_camera_delay_capture_entries" camera:singleIcon="@drawable/ic_indicator_delaycapture" />
    <IconListPreference camera:title="@string/pref_camera_coloreffect_title" camera:key="pref_camera_shader_coloreffect_key" camera:defaultValue="@string/pref_camera_shader_coloreffect_default" camera:hasPopup="true" camera:singleIcon="@drawable/ic_effect_button_normal" />
    <IconListPreference camera:title="@string/pref_camera_gradienter_title" camera:key="pref_camera_gradienter_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_gradienter" />
    <IconListPreference camera:title="@string/pref_camera_tilt_shift_title" camera:key="pref_camera_tilt_shift_mode" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_tilt_shift" />
    <IconListPreference camera:title="@string/pref_camera_tilt_shift_title" camera:key="pref_camera_tilt_shift_key" camera:defaultValue="@string/pref_camera_tilt_shift_default" camera:entryValues="@array/pref_camera_tilt_shift_entryvalues" camera:entries="@array/pref_camera_tilt_shift_entries" camera:singleIcon="@drawable/ic_indicator_tilt_shift" />
    <IconListPreference camera:title="@string/pref_camera_magic_mirror_title" camera:key="pref_camera_magic_mirror_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_magic_mirror" />
    <IconListPreference camera:title="@string/pref_face_beauty_title" camera:key="pref_camera_face_beauty_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_facebeauty" />
    <IconListPreference camera:title="@string/pref_camera_ubifocus_title" camera:key="pref_camera_ubifocus_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_ubifocus" />
    <IconListPreference camera:title="@string/pref_camera_manual_mode_title" camera:key="pref_camera_manual_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_manual" />
    <IconListPreference camera:title="@string/pref_camera_square_mode_title" camera:key="pref_camera_square_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="false" camera:singleIcon="@drawable/ic_indicator_square" />
    <IconListPreference camera:title="@string/pref_manual_exposure_title" camera:key="pref_qc_camera_exposuretime_key" camera:defaultValue="@string/pref_camera_exposuretime_default" camera:entryValues="@array/pref_camera_exposuretime_entryvalues" camera:entries="@array/pref_camera_exposuretime_entries" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_camera_whitebalance_title" camera:key="pref_camera_whitebalance_key" camera:defaultValue="@string/pref_camera_whitebalance_default" camera:entryValues="@array/pref_camera_whitebalance_entryvalues" camera:entries="@array/pref_camera_whitebalance_entries" camera:hasPopup="true" camera:icons="@array/camera_whitebalance_icons" />
    <IconListPreference camera:title="@string/pref_camera_iso_title" camera:key="pref_qc_camera_iso_key" camera:defaultValue="@string/pref_camera_iso_default" camera:entryValues="@array/pref_camera_iso_entryvalues" camera:entries="@array/pref_camera_iso_entries" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_qc_focus_position_title" camera:key="pref_focus_position_key" camera:defaultValue="@string/pref_qc_focus_position_value_default" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_camera_groupshot_mode_title" camera:key="pref_camera_groupshot_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="false" camera:singleIcon="@drawable/ic_indicator_groupshot" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_key" camera:defaultValue="@string/pref_camera_scenemode_default" camera:entryValues="@array/pref_camera_scenemode_entryvalues" camera:entries="@array/pref_camera_scenemode_entries" camera:icons="@array/camera_scenemode_largeicons" />
    <IconListPreference camera:title="@string/pref_camera_scenemode_title" camera:key="pref_camera_scenemode_setting_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_scenemode" />
    <IconListPreference camera:title="@string/pref_camera_stereo_mode_title" camera:key="pref_camera_stereo_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_camera_stereo_mode_title" camera:key="pref_camera_stereo_key" camera:defaultValue="@string/pref_camera_stereo_default" camera:entryValues="@array/pref_camera_stereo_entryvalues" camera:entries="@array/pref_camera_stereo_entries" />
    <IconListPreference camera:title="@string/pref_camera_zoom_mode_title" camera:key="pref_camera_zoom_mode_key" camera:defaultValue="@string/pref_camera_zoom_mode_default" camera:entryValues="@array/pref_camera_zoom_mode_entryvalues" camera:entries="@array/pref_camera_zoom_mode_entries" camera:hasPopup="false" />
    <IconListPreference camera:title="@string/pref_camera_portrait_mode_title" camera:key="pref_camera_portrait_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:entries="@array/pref_camera_portrait_mode_entries" camera:hasPopup="false" />
    <IconListPreference camera:title="@string/pref_skin_beautify_intelligent_title" camera:key="pref_camera_face_beauty_key" camera:defaultValue="@string/pref_face_beauty_default" camera:entryValues="@array/pref_camera_skin_beautify_entryvalues" camera:entries="@array/pref_camera_skin_beautify_entries" camera:hasPopup="true" camera:icons="@array/camera_skin_beautify_icons" camera:singleIcon="@drawable/ic_indicator_facebeauty" />
    <IconListPreference camera:title="@string/pref_skin_beautify_color_title" camera:key="pref_skin_beautify_skin_color_key" camera:defaultValue="@string/pref_skin_beautify_color_default" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_beautify_color" />
    <IconListPreference camera:title="@string/pref_skin_beautify_slim_title" camera:key="pref_skin_beautify_slim_face_key" camera:defaultValue="@string/pref_skin_beautify_slim_default" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_beautify_slim" />
    <IconListPreference camera:title="@string/pref_skin_beautify_eye_title" camera:key="pref_skin_beautify_enlarge_eye_key" camera:defaultValue="@string/pref_skin_beautify_eye_default" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_beautify_eye" />
    <IconListPreference camera:title="@string/pref_skin_beautify_smooth_title" camera:key="pref_skin_beautify_skin_smooth_key" camera:defaultValue="@string/pref_skin_beautify_smooth_default" camera:entryValues="@array/pref_skin_beautify_multi_level_entryvalues" camera:entries="@array/pref_skin_beautify_multi_level_entries" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_beautify_smooth" />
</PreferenceGroup>
