<?xml version="1.0" encoding="utf-8"?>
<PreferenceGroup xmlns:android="http://schemas.android.com/apk/res/com.android.camera" camera:title="@string/pref_camcorder_settings_category">
    <IconListPreference camera:title="@string/pref_video_speed_fast_title" camera:key="pref_video_speed_fast_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_video_speed_fast" />
    <IconListPreference camera:title="@string/pref_video_speed_slow_title" camera:key="pref_video_speed_slow_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:singleIcon="@drawable/ic_indicator_video_speed_slow" />
    <IconListPreference camera:title="@string/pref_audio_focus_title" camera:key="pref_audio_focus_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" camera:singleIcon="@drawable/ic_indicator_audio_focus" />
    <IconListPreference camera:title="@string/pref_audio_focus_title" camera:key="pref_audio_focus_key" camera:defaultValue="@string/pref_audio_focus_default" camera:entryValues="@array/pref_audio_focus_entryvalues" camera:entries="@array/pref_audio_focus_entries" camera:singleIcon="@drawable/ic_indicator_audio_focus" />
    <IconListPreference camera:title="@string/pref_camera_stereo_mode_title" camera:key="pref_camera_stereo_mode_key" camera:defaultValue="@string/pref_camera_setting_switch_default" camera:entryValues="@array/pref_camera_setting_switch_entryvalues" camera:hasPopup="true" />
    <IconListPreference camera:title="@string/pref_camera_stereo_mode_title" camera:key="pref_camera_stereo_key" camera:defaultValue="@string/pref_camera_stereo_default" camera:entryValues="@array/pref_camera_stereo_entryvalues" camera:entries="@array/pref_camera_stereo_entries" />
</PreferenceGroup>
